Add user images and fix order model's non customer column

--- a/models/marts/_models.yml
+++ b/models/marts/_models.yml
@@ -54,4 +54,6 @@ models:
   - name: credit_memos
   - name: credit_memo_items
   - name: order_addresses
-  
+  - name: user_images_stats
+  - name: foundation_quiz_results
+          
